@@ -244,8 +244,6 @@ typedef long (CALLBACK* PADshutdown)(void);
 typedef long (CALLBACK* PADtest)(void);		
 typedef long (CALLBACK* PADclose)(void);
 typedef long (CALLBACK* PADquery)(void);
-typedef long (CALLBACK*	PADreadPort1)(PadDataS*);
-typedef long (CALLBACK* PADreadPort2)(PadDataS*);
 typedef long (CALLBACK* PADkeypressed)(void);
 typedef unsigned char (CALLBACK* PADstartPoll)(int);
 typedef unsigned char (CALLBACK* PADpoll)(unsigned char);
@@ -260,7 +258,6 @@ PADtest             PAD1_test;
 PADopen             PAD1_open;
 PADclose            PAD1_close;
 PADquery			PAD1_query;
-PADreadPort1		PAD1_readPort1;
 PADkeypressed		PAD1_keypressed;
 PADstartPoll        PAD1_startPoll;
 PADpoll             PAD1_poll;
@@ -274,7 +271,6 @@ PADtest             PAD2_test;
 PADopen             PAD2_open;
 PADclose            PAD2_close;
 PADquery            PAD2_query;
-PADreadPort2		PAD2_readPort2;
 PADkeypressed		PAD2_keypressed;
 PADstartPoll        PAD2_startPoll;
 PADpoll             PAD2_poll;
